[package]
name = "hellth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = { version = "0.19.0", features = [ "2d", "standard_dynamic_assets" ] }
bevy_common_assets = { version = "0.9.0", features = [ "ron" ] }
bevy_mod_picking = "0.17.0"

rand_core = "0.6"
bevy_rand = { version = "0.4", features = ["rand_chacha", "wyrand"] }

image = "0.24.9"
winit = "0.28"