[package]
name = "hellth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utility
rand_core = "0.6"
image = "0.24.9"
winit = "0.28"
funty = "2.0.0"
imgui = "0.11.0"

# Bevy
bevy = { version = "0.12.1", features = [ "file_watcher", "embedded_watcher" ] }
bevy_asset_loader = { version = "0.19.0", features = [ "2d", "standard_dynamic_assets" ] }
bevy_common_assets = { version = "0.9.0", features = [ "ron" ] }
bevy_trauma_shake = "0.1.0"
bevy_tweening = "0.9.0"
bevy_rand = { version = "0.4", features = ["rand_chacha", "wyrand"] }
bevy_mod_imgui = "0.2.1"
bevy_mouse_tracking_plugin = "0.7.0"
bevy_mod_picking = { version = "0.17", default-features = false, features = [ "backend_sprite", "selection", "highlight"] }
bresenham = "0.1.1"
doryen-fov="*"
priority-queue = "2.0.2"
pathfinding = "4.9.1"

[features]
debug_mode = []